force-app/main/default/objects/Record_Retention_Rule__mdt/Record_Retention_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Record Retention Rule</label>
    <pluralLabel>Record Retention Rules</pluralLabel>
</CustomObject>