force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description
  >What the framework does to a record once it has passed every filter. Delete is the only fully-implemented action today; Archive is reserved.</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
                <default>true</default>
                <label>Delete</label>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>