force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Per-rule kill-switch. False disables this rule without deleting the CMDT row.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>