force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Age_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Age_Field_API_Name__c</fullName>
    <description
  >DateTime field used to compute age. Defaults to CreatedDate when blank.</description>
    <label>Age Field API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>