force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Age_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Threshold_Days__c</fullName>
    <description
  >Records older than this many days (vs the configured age field) are candidates for deletion.</description>
    <label>Age Threshold Days</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>