force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Field_Regex_Match__c.field-meta.xml
<CustomField>
    <fullName>Field_Regex_Match__c</fullName>
    <description
  >Optional field API name whose value will be regex-tested. Used with Field_Regex_Pattern__c for an additional in-memory filter after the SOQL select.</description>
    <label>Field Regex Match</label>
    <length>120</length>
    <type>Text</type>
</CustomField>