force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Field_Regex_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Field_Regex_Pattern__c</fullName>
    <description
  >Optional Java-style regex pattern paired with Field_Regex_Match__c. Records whose field value matches the regex are kept as delete candidates.</description>
    <label>Field Regex Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>