force-app/main/default/objects/Record_Retention_Rule__mdt/fields/Predicate_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Predicate_Apex_Class__c</fullName>
    <description
  >Optional Apex class implementing IRecordRetentionPredicate. When set, the batch calls shouldKeep(record) and only deletes records where shouldKeep returns false.</description>
    <label>Predicate Apex Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>