force-app/main/default/objects/Record_Retention_Rule__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description
  >API name of the SObject this rule targets (e.g. Engagement_Touch__c, Log__c).</description>
    <label>SObject API Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>