force-app/main/default/objects/Record_Retention_Rule__mdt/fields/SOQL_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Where_Clause__c</fullName>
    <description
  >Optional raw SOQL fragment appended to the candidate selection query. Author CMDT rows only via metadata deploy — no user input. Example: Do_Not_Delete__c = FALSE.</description>
    <label>SOQL Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>